<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:orientation="vertical" android:padding="16dp">


    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/configure"
        android:layout_marginBottom="8dp" />

    <TextView
        android:id="@+id/spinnerLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/synchronize_label"
        android:layout_below="@+id/titleTextView" />

    <Spinner
        android:id="@+id/time_spinner"
        android:layout_below="@+id/spinnerLabelTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        />

    <RelativeLayout
        android:id="@+id/priceUpPrimaryLayout"
        android:layout_below="@+id/time_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        >

        <TextView
            android:id="@+id/priceUpPrimaryColorLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Głowny kolor wzrostu ceny:"/>

        <TextView
            android:id="@+id/priceUpPrimaryColor"
            android:layout_toRightOf="@+id/priceUpPrimaryColorLabel"
            android:layout_marginLeft="15dp"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="20dp" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/priceUpSecondaryLayout"
        android:layout_below="@+id/priceUpPrimaryLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        >

        <TextView
            android:id="@+id/priceUpSecondaryColorLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Drugi kolor wzrostu ceny:"/>

        <TextView
            android:id="@+id/priceUpSecondaryColor"
            android:layout_toRightOf="@+id/priceUpSecondaryColorLabel"
            android:layout_marginLeft="15dp"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="20dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/priceDownPrimaryLayout"
        android:layout_below="@+id/priceUpSecondaryLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        >

        <TextView
            android:id="@+id/priceDownPrimaryColorLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Główny kolor spadku ceny:"/>

        <TextView
            android:id="@+id/priceDownPrimaryColor"
            android:layout_toRightOf="@+id/priceDownPrimaryColorLabel"
            android:layout_marginLeft="15dp"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="20dp" />
    </RelativeLayout>

    <Button
        android:id="@+id/add_button"
        android:layout_below="@+id/priceDownPrimaryLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_widget"
        android:layout_marginTop="8dp" />



</RelativeLayout>